@@ -1,3 +1,9 @@
+Mon Aug  20 23:05:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
+	* Fixed _LOTS_ of typos in the box widget whiched caused very odd
+	  behaviour.
+	* Also started writing a test program, the Ewl_Box widget test is the
+	  only one implemented right now.
+
 Mon Aug  20 17:26:19 2001 Christopher Rosendahl <crosendahl@northernwatch.com>
 	* Added x & y padding policy ability to the box children.
 	* Some minor fixes in the box code.
